--- a/.github/workflows/push.yaml
+++ b/.github/workflows/push.yaml
@@ -7,11 +7,12 @@ jobs:
       - name: Checkout
         uses: actions/checkout@master
       - name: Install Racket
-        uses: Bogdanp/setup-racket@v1.6.1
+        uses: Bogdanp/setup-racket@v1.10
         with:
           architecture: 'x64'
           distribution: 'full'
-          version: '8.2'
+          variant: 'CS'
+          version: '8.9'
       - name: Install Package and its Dependencies
         run: raco pkg install --auto --batch
       - name: Run Tests
