Moved auth generation to separate file.

--- a/.github/workflows/push.yaml
+++ b/.github/workflows/push.yaml
@@ -16,4 +16,4 @@ jobs:
       - name: Install Package and its Dependencies
         run: raco pkg install --auto --batch
       - name: Run Tests
-        run: raco test main.rkt
+        run: raco test auth.rkt
