--- a/.github/workflows/pushrls.yaml
+++ b/.github/workflows/pushrls.yaml
@@ -16,6 +16,11 @@ jobs:
       - name: Create Release
         id: create_release
         uses: Bogdanp/setup-racket@v1.10
+        with:
+          architecture: 'x64'
+          distribution: 'full'
+          variant: 'CS'
+          version: '8.9'
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
         with:
