--- a/.github/workflows/push.yaml
+++ b/.github/workflows/push.yaml
@@ -19,3 +19,4 @@ jobs:
         run: raco test auth.rkt
       - name: Coveralls 
         uses: coverallsapp/github-action@v2
+        github-token: ${{ secrets.COVERALLS_REPO_TOKEN }}; 
