--- a/.github/workflows/push.yaml
+++ b/.github/workflows/push.yaml
@@ -19,4 +19,6 @@ jobs:
         run: raco test auth.rkt
       - name: Coveralls 
         uses: coverallsapp/github-action@v2
-        github-token: ${{ secrets.COVERALLS_REPO_TOKEN }}; 
+        with:
+          repo-token: ${{ secrets.GITHUB_TOKEN }}
+          github-token: ${{ secrets.GITHUB_TOKEN }}
