--- a/.github/workflows/push.yaml
+++ b/.github/workflows/push.yaml
@@ -17,9 +17,10 @@ jobs:
         run: raco pkg install --auto --batch
       - name: Run Tests
         run: raco test auth.rkt
+      - name: Cover Tests  
+        run: raco cover auth.rkt
       - name: Coveralls 
         uses: coverallsapp/github-action@v2
-        run: raco cover auth.rkt
         with:
           repo-token: ${{ secrets.GITHUB_TOKEN }}
           github-token: ${{ secrets.GITHUB_TOKEN }}
