--- a/.github/workflows/pushrls.yaml
+++ b/.github/workflows/pushrls.yaml
@@ -32,4 +32,6 @@ jobs:
           draft: false
           prerelease: false
       - name: Install Package and its Dependencies
+        run: raco pkg install --auto --batch
+      - name: Make exe
         run: raco exe --gui main.rkt
